# Mountrix

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTIERUNGSPLAN.md  LICENSE  README.md  claude.md  projekt.md  pyproject.toml  requirements.txt  setup.py  test_modern_design.py  test_stylesheet_minimal.py
data/: nas_templates.json
scripts/: generate_icons.sh
src/mountrix/: main.py
src/mountrix/core/: credentials.py  detector.py  fstab.py  mounter.py  network.py  templates.py
src/mountrix/gui/qt/: advanced.py  dialogs.py  main_window.py  wizard.py
tests/: test_credentials.py  test_detector.py  test_fstab.py  test_gui_advanced.py  test_gui_dialogs.py  test_gui_main_window.py  test_gui_wizard.py  test_mounter.py  test_network.py  test_templates.py
